# pygic

./: .coveragerc  README.md  pyproject.toml  pytest.ini
src/pygic/: __init__.py  cli.py  config.py  file.py  gitignore.py  templates.py  utils.py
tests/: test_cli.py  test_file.py  test_gitignore.py  test_templates.py
tests/targets/: c.java.wordpress.androidstudio.gradle.gitignore  c.python.gitignore  c.python.java.androidstudio.gitignore  c.wordpress.gradle.androidstudio.gitignore  clion+all.java.gitignore  java.gradle.androidstudio.visualstudio.umbraco.gitignore  java.wordpress.gitignore  jetbrains+all.gitignore  reactnative.gitignore  rust.rust-analyzer.visualstudiocode.jetbrains+all.gitignore  umbraco.gitignore
