[project]
name = "pygic"
authors = [
    { name = "Loris Floquet" },
]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click-help-colors>=0.9.4",
    "click>=8.1.7",
    "termcolor>=2.3.0",
]

[project.scripts]
pygic = "pygic.cli:pygic"

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "ipykernel>=6.29.5",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]
lint = [
    "ruff>=0.6.4",
]

[project.optional-dependencies]
git = [
    "appdirs>=1.4.4",
    "yaspin>=3.1.0",
    "gitpython>=3.1.43",
]
dulwich = [
    "appdirs>=1.4.4",
    "yaspin>=3.1.0",
    "dulwich>=0.22.6",
]
search = [
    "pzp>=0.0.24",
]

[build-system]
requires=["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pygic"]

[tool.hatch.build]
include = [
    "src/pygic/templates/**",
]
